--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,8 +4,12 @@
 
 {% block content %}
 <div class="main-content main-content-list container">
-    {% for recipe in recipes %}
+
+    {% for recipe in recipes  %}
         {% include 'recipes/partials/recipe.html' %}
+    {% empty %}
+        <h1>Sem receitas cadastradas 😢</h1>
     {% endfor %}
+
 </div>
 {% endblock content %}
