--- a/recipes/templates/recipes/pages/search.html
+++ b/recipes/templates/recipes/pages/search.html
@@ -1,7 +1,15 @@
 {% extends 'global/base.html' %}
 
-{% block title %}Search | {% endblock title %}
+{% block title %}{{ page_title }}{% endblock title %}
 
 {% block content %}
+<div class="main-content main-content-list container">
 
+    {% for recipe in recipes  %}
+        {% include 'recipes/partials/recipe.html' %}
+    {% empty %}
+        <h1>Sem receitas cadastradas 😢</h1>
+    {% endfor %}
+
+</div>
 {% endblock content %}
