--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -273,3 +273,24 @@ h6 {
 .main-footer a:hover {
   filter: brightness(0.8);
 }
+
+.pagination-content {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem 0.5rem;
+}
+
+.pagination .page-item {
+  background: var(--color-gray-3);
+  padding: 0.5rem 1rem;
+}
+
+.pagination .page-link {
+  text-decoration: none;
+  background: var(--color-primary);
+  color: var(--color-white);
+}
+
+.pagination .page-current {
+  background: var(--color-primary-dark);
+}
