CSS para global
CSS movida para pasta global

--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --color-primary: #269fe6;
   --color-primary-hover: #2086c2;
   --color-primary-dark: #13141f;
@@ -293,4 +293,4 @@ h6 {
 
 .pagination .page-current {
   background: var(--color-primary-dark);
-}
+} */
