--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   --color-primary: #269fe6;
   --color-primary-hover: #2086c2;
   --color-primary-dark: #13141f;
@@ -239,9 +239,7 @@ h6 {
   filter: brightness(2);
 }
 
-
-
-.main-content-detail  .recipe-list-item {
+.main-content-detail .recipe-list-item {
   max-width: 84rem;
   margin: 0 auto;
 }
@@ -274,12 +272,28 @@ h6 {
   filter: brightness(0.8);
 }
 
+.preparation-steps h1,
+.preparation-steps h2,
+.preparation-steps h3,
+.preparation-steps h4,
+.preparation-steps h5,
+.preparation-steps h6,
+.preparation-steps p,
+.preparation-steps pre {
+  margin: 2rem 0;
+}
+
+.preparation-steps ol,
+.preparation-steps ul {
+  margin: 2rem;
+  padding: 0 2rem;
+}
+
 .pagination-content {
   display: flex;
   flex-flow: row wrap;
   gap: 1rem 0.5rem;
 }
-
 .pagination .page-item {
   background: var(--color-gray-3);
   padding: 0.5rem 1rem;
@@ -293,4 +307,75 @@ h6 {
 
 .pagination .page-current {
   background: var(--color-primary-dark);
-} */
+}
+
+/* Messages */
+.messages-container {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: calc(var(--spacing-gutter-medium) / 2);
+}
+
+.message {
+  padding: 1rem;
+  border-radius: 4px;
+  border: 1px solid var(--color-dark-text);
+  background: var(--color-gray-2);
+  color: var(--color-dark-text);
+}
+
+.message-error {
+  border: 1px solid var(--color-error-dark);
+  background: var(--color-error-light);
+  color: var(--color-error-dark);
+}
+
+.message-success {
+  border: 1px solid var(--color-success-dark);
+  background: var(--color-success-light);
+  color: var(--color-success-dark);
+}
+
+.message-warning {
+  border: 1px solid var(--color-warning-dark);
+  background: var(--color-warning-light);
+  color: var(--color-warning-dark);
+}
+
+.message-alert {
+  border: 1px solid var(--color-alert-dark);
+  background: var(--color-alert-light);
+  color: var(--color-alert-dark);
+}
+
+.message-info {
+  border: 1px solid var(--color-info-dark);
+  background: var(--color-info-light);
+  color: var(--color-info-dark);
+}
+
+.message-debug {
+  border: 1px solid var(--color-debug-dark);
+  background: var(--color-debug-light);
+  color: var(--color-debug-dark);
+}
+
+/* Generics */
+
+.center {
+  text-align: center;
+}
+
+.m-x {
+  margin: 0 var(--spacing-gutter-medium);
+}
+
+.m-y {
+  margin: var(--spacing-gutter-medium) 0;
+}
+
+@media (max-width: 600px) {
+  .main-content-list {
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  }
+}
