--- a/recipes/templates/recipes/pages/search.html
+++ b/recipes/templates/recipes/pages/search.html
@@ -4,12 +4,12 @@
 
 {% block content %}
 <div class="main-content main-content-list container">
-
-    {% for recipe in recipes  %}
-        {% include 'recipes/partials/recipe.html' %}
-    {% empty %}
-        <h1>Sem receitas cadastradas 😢</h1>
-    {% endfor %}
-
+{% for recipe in recipes %}
+    {% include 'recipes/partials/recipe.html' %}
+{% empty %}
+    <div class="center m-y">
+        <h1>No recipes found here 🥲</h1>
+    </div>
+{% endfor %}
 </div>
 {% endblock content %}
