--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -5,12 +5,14 @@
 {% block content %}
     <div class="main-content center container">
         <!--aqui um exemplo de uso de informação da session armazenada como cookie do usuário no navegador-->
-        <h2>Register {{ request.session.number }}</h2>
+        <h2>Register</h2>
     </div>
+
+    {% include 'recipes/partials/messages.html' %}
 
     <div class="main-content container">
         <form action="{% url 'authors:create' %}" method="POST"> <!-- o método precisa ser POST por se tratar de um formulário -->
-            {% csrf_token %} <!--necessário para segurança-->
+            {% csrf_token %}
             <div class="form-content form-content-grid">
                 {% for field in form %}
                     <!-- div form-group para tratar campo e label agrupado, como no bootstrap -->
