Centralizando botão SEND

--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -29,7 +29,7 @@
                 {% endfor %}
             </div>
             <!--o botão precisa estar no mesmo form-group para funcionar com o formulário-->
-            <div class="form-content form-content-grid">
+            <div class="form-content center form-content-grid">
                 <div class="form-group">
                     <button type="submit">Send</button>
                 </div>
