--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -1,7 +1,6 @@
-<div class="main-content center container">
-    <!--aqui um exemplo de uso de informação da session armazenada como cookie do usuário no navegador-->
+{% comment %} <div class="main-content center container">
     <h2>Register</h2>
-</div>
+</div> {% endcomment %}
 
 {% include 'global/partials/messages.html' %}
 
