--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -1,10 +1,10 @@
 {% extends 'global/base.html' %}
 
-{% block title %} Register | {% endblock title %}
+{% block title %} Login | {% endblock title %}
 
 {% block content %}
 <div class="main-content center container">
-    <h2>Register</h2>
+    <h2>Login</h2>
 </div>
 
     {% include 'global/partials/messages.html' %}
