Até aula 161. Fim de Forms
Fim da Seção 13: Forms

--- a/base_static/global/css/global-style.css
+++ b/base_static/global/css/global-style.css
@@ -430,3 +430,15 @@
     }
   }
   
+  .plaintext-button {
+    display: inline;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: var(--color-primary);
+    font-size: 1.6rem;
+  }
+
+  .inline-form {
+    display: inline;
+  }
