--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -6,6 +6,22 @@
 <div class="main-content center container">
     <h2>Dashboard ({{ user }})</h2>
     {% include 'authors/partials/login_messages.html' %}
+
+    <div class="authors-dashboard-container">
+        <h3>Your Recipes</h3>
+        <ul>
+            {% for recipe in recipes %}
+                <li>
+                    <a href="#">{{recipe.title}}</a>
+                </li>
+            {% empty %}
+                <li>
+                    <p>You don't have recipes to show here</p>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+
 </div>
 
     {% include 'global/partials/messages.html' %}
