--- a/base_static/global/css/global-style.css
+++ b/base_static/global/css/global-style.css
@@ -67,6 +67,15 @@
   h6 {
     font-family: var(--font-headings);
   }
+
+  img {
+    max-width: 100%;
+  }
+
+  a {
+    color: var(--color-primary);
+    text-decoration: none;
+  }
   
   .container {
     max-width: 144rem;
@@ -338,7 +347,9 @@
     color: var(--color-error-dark);
   }
 
-  .form-content input {
+  .form-content input,
+  .form-content textarea,
+  .form-content select {
     width: 100%;
     padding: 1rem;
     border-radius: 0.6rem;
@@ -414,6 +425,10 @@
   .center {
     text-align: center;
   }
+
+  .left {
+    text-align: left;
+  }
   
   .m-x {
     margin: 0 var(--spacing-gutter-medium);
@@ -441,6 +456,10 @@
 
   .inline-form {
     display: inline;
+  }
+
+  .span-2 {
+    grid-column: span 2;
   }
 
   .login-message {
