--- a/authors/templates/authors/partials/login_messages.html
+++ b/authors/templates/authors/partials/login_messages.html
@@ -1,6 +1,7 @@
 {% if request.user.is_authenticated %}
         <div class='login-message'>
             Você está logado com {{ request.user.username }}.
+            <a href="{% url 'authors:dashboard' %}">Veja suas receitas</a> ou
             <form class="inline-form" action="{% url 'authors:logout' %}" method='POST'>
                 {% csrf_token %}
                 <input type="hidden" name="username" value="{{request.user.username}}">
