--- a/authors/templates/authors/pages/dashboard_recipe_new.html
+++ b/authors/templates/authors/pages/dashboard_recipe_new.html
@@ -1,10 +1,10 @@
 {% extends 'global/base.html' %}
 
-{% block title %}Dashboard Recipe Create{% endblock title %}
+{% block title %}Dashboard Recipe New{% endblock title %}
 
 {% block content %}
 <div class="main-content center container">
-    <h2>Dashboard Recipe Create</h2>
+    <h2>Dashboard Recipe New</h2>
     {% include 'global/partials/messages.html' %}
     {% include 'authors/partials/login_messages.html' %}
 
