--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -6,6 +6,7 @@
 <div class="main-content center container">
     <h2>Dashboard ({{ user }})</h2>
     {% include 'authors/partials/login_messages.html' %}
+    {% include 'global/partials/messages.html' %}
 
     <div class="authors-dashboard-container">
         <h3>Your Recipes</h3>
@@ -13,6 +14,11 @@
             {% for recipe in recipes %}
                 <li>
                     <a href="{% url 'authors:dashboard_recipe_edit' recipe.id %}">{{recipe.title}}</a>
+                    <form class="inline-form form-delete" action="{% url 'authors:dashboard_recipe_delete' %}" method='POST'>
+                        {% csrf_token %}
+                        <input type="hidden" name="id" value="{{recipe.id}}">
+                        <button class="plaintext-button" type="submit">🗑</button>
+                    </form>
                 </li>
             {% empty %}
                 <li>
@@ -24,6 +30,6 @@
 
 </div>
 
-    {% include 'global/partials/messages.html' %}
+    
 
 {% endblock content %}
